# idyll

./: .gitignore  .repos  Cargo.toml  cabal.project  idyll.cabal
bootstrap/: Main.hs
bootstrap/Idyllic/Syn/: AST.hs  Layout.hs  Lexer.x  Parser.hs  Token.hs
bootstrap/Idyllic/Typing/: Infer.hs
bootstrap/Idyllic/Utils/: Span.hs
compiler/: Cargo.toml  Main.hs
compiler/Codac/: Build.hs  Core.hs
compiler/Codac/Rename/: HIR.hs  Resolver.hs  Symbol.hs
compiler/Codac/Static/: Scc.hs
compiler/Codac/Syn/: AST.hs  Layout.hs  Lexer.x  Parser.hs  Token.hs
compiler/Codac/Typing/: Infer.hs  Ty.hs
compiler/Codac/Utils/: LineIndex.hs  Located.hs  Span.hs
compiler/Idyllic/Rename/: HIR.hs  Resolver.hs  Symbol.hs
compiler/Idyllic/Syn/: AST.hs  Layout.hs  Lexer.x  Parser.hs  Token.hs
compiler/Idyllic/Typing/: Infer.hs
compiler/Idyllic/Utils/: Loc.hs  Located.hs  Span.hs
compiler/idyllic/: Cargo.toml
compiler/idyllic-analysis/: Cargo.toml
compiler/idyllic-ast/: Cargo.toml
compiler/idyllic-ast/src/: lib.rs
compiler/idyllic-core/: Cargo.toml
compiler/idyllic-infer/: Cargo.toml
compiler/idyllic-nir/: Cargo.toml
compiler/idyllic-parse/: Cargo.toml
compiler/idyllic-parse/src/: lib.rs.OLD
compiler/idyllic-pipeline/: Cargo.toml
compiler/idyllic-pipeline/src/: lib.rs
compiler/idyllic-query/: Cargo.toml
compiler/idyllic-read/: Cargo.toml
compiler/idyllic-read/src/: lib.rs  reader_error.rs
compiler/idyllic-rename/: Cargo.toml
compiler/idyllic-syn/: Cargo.toml
compiler/idyllic-syn/src/: ast.rs  lexer.rs  parser.rs  token.rs
compiler/idyllic-tir/: Cargo.toml
compiler/idyllic-token/: Cargo.toml
compiler/idyllic-token-tree/: Cargo.toml
compiler/idyllic-token-tree/src/: lib.rs
compiler/idyllic-token/src/: lib.rs
compiler/idyllic-tokenize/: Cargo.toml
compiler/idyllic-tokenize/src/: token_stream.rs
compiler/idyllic-utils/: Cargo.toml
compiler/idyllic-utils/src/: intern.rs
compiler/idyllic/src/: ast.rs  layout.rs  lib.rs  main.rs  pipeline.rs  token.rs  token_stream.rs  token_tree.rs  utils.rs
compiler/src/: ast.rs  lib.rs  parser.rs  pipeline.rs  token.rs  token_stream.rs  utils.rs
driver/: Cargo.toml
driver/src/: main.rs
examples/: bootstrap.idl  mvp.idl  scratch.idl  scratch.mn  stream.idl
examples/project_euler/: p5.idl  p6.idl
lib/std/collections/: list.idl  vec.idl  vector.idl
rts/: Cargo.toml
rts/src/: main.rs
rts/src/vm/: mod.rs  opcode.rs
