cabal-version: 3.0
name: coda
version: 0.1.0.0
synopsis: The Coda programming language
license: BSD-3-Clause
license-file: LICENSE
author: Chris McDearman
maintainer: mcdearmanchris@gmail.com
category: Language
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Werror=missing-signatures
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Wno-unused-do-bind

--   -f+megaparsec-compat
--   -fllvm
--   -haddock
--   -ddump-simpl -ddump-cmm -ddump-stg-final -ddump-to-file -dsuppress-all
executable codac
  import: warnings
  main-is: Main.hs
  other-modules:
    Codac.Build
    Codac.Build.Driver
    Codac.Build.Pipeline
    Codac.Build.Pipeline.Effect
    Codac.Core
    Codac.Rename.HIR
    Codac.Rename.Resolver
    Codac.Rename.Symbol
    Codac.Static.Scc
    Codac.Syn.AST
    Codac.Syn.Layout
    Codac.Syn.Lexer
    Codac.Syn.Parser
    Codac.Syn.Token
    Codac.Typing.Infer
    Codac.Typing.Ty
    Codac.Utils.LineIndex
    Codac.Utils.Located
    Codac.Utils.Span

  default-extensions:
    BangPatterns
    FlexibleInstances
    LambdaCase
    MagicHash
    MultilineStrings
    OrPatterns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  build-depends:
    array,
    base,
    bytestring,
    containers,
    data-default,
    diagnose,
    hashable,
    haskeline,
    intern,
    lens,
    megaparsec,
    mtl,
    optics,
    optparse-applicative,
    parser-combinators,
    pretty-simple,
    prettyprinter,
    primitive,
    stm,
    text,
    transformers,
    unordered-containers,
    vector,
    wcwidth,

  build-tool-depends: alex:alex
  hs-source-dirs: compiler
  default-language: Haskell2010