[package]
name = "codac"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.0"
colored = "3.0.0"
pretty = { version = "0.12.5", features = ["termcolor"] }
rustyline = { version = "17.0.2", features = ["with-file-history", "derive"] }
log = "0.4.29"
env_logger = "0.11.8"
once_cell = "1.21.3"
itertools = "0.14.0"
insta = { version = "1.46.0", features = ["yaml"] }
clap = { version = "4.5.54", features = ["cargo", "derive"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
