[package]
name = "idyllic-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idyllic-utils = { path = "../idyllic-utils" }
idyllic-token = { path = "../idyllic-token" }
idyllic-tokenize = { path = "../idyllic-tokenize" }
idyllic-token-tree = { path = "../idyllic-token-tree" }
idyllic-read = { path = "../idyllic-read" }
idyllic-ast = { path = "../idyllic-ast" }
# idyllic-parse = { path = "../idyllic-parse" }
idyllic-query = { path = "../idyllic-query" }
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
pretty = "0.12.3"
